add buttons and fix layout

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <div id="sketch-container"> 
     <!-- this is where the p5 sketch content goes -->
   </div>
+
+  <div id="decision-container">
+    <button class="decision-button" id="button-A">
+      A
+    </button>
+    <button class="decision-button" id="button-B">
+      B
+    </button>
+    
+  </div>
 </body>
 <script src="./sketch.js"></script>
 </html>
