add start button and remove start button func

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
   </div>
 
   <div id="decision-container">
-    <button class="decision-button" id="button-A">
+    <!-- <button class="decision-button" id="button-A">
       A
     </button>
     <button class="decision-button" id="button-B">
       B
+    </button> -->
+    <button id="start-button" class="decision-button" onclick="startClick()">
+      START
     </button>
-    
   </div>
 </body>
 <script src="./sketch.js"></script>
