--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
 
   <link rel="stylesheet" href="styles.css" />
-  <script src=http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js></script>
+  <!-- p5 lib linked with url -->
+  <!-- <script src=http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js></script> -->
+
+  <!-- p5 linked with file -->
+  <script src=lib/p5/p5.js></script>
 </head>
 <body>
   <div id="sketch-container"> 
@@ -15,15 +19,11 @@
   </div>
 
   <div id="decision-container">
-    <!-- <button class="decision-button" id="button-A">
-      A
-    </button>
-    <button class="decision-button" id="button-B">
-      B
-    </button> -->
+
     <button id="start-button" class="decision-button" onclick="startClick()">
       START
     </button>
+    
   </div>
 </body>
 <script src="./sketch.js"></script>
