--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 <body>
   <div id="sketch-container"> 
     <!-- this is where the p5 sketch content goes -->
+    
+    <div id="sceneText-container">
+      <p id="sceneText"></p>
+    </div>
   </div>
-
+  
   <div id="decision-container">
 
     <button id="start-button" class="decision-button" onclick="startClick()">
