change button load + auto input text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   <div id="decision-container">
 
-    <button id="start-button" class="decision-button" onclick="startClick()">
+    <button id="start-button" class="decision-button">
       START
     </button>
     
