char image & back img & styling

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Eye of the Storm</title>
 
+  <!-- font link -->
+  <link href="https://fonts.googleapis.com/css?family=Manrope:400,800&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css" />
   <!-- p5 lib linked with url -->
@@ -14,6 +16,10 @@
   <script src=lib/p5/p5.js></script>
 </head>
 <body>
+  <div id="title">
+    <h1>Eye of the Storm</h1>
+    <p>Kennedy Cambra-Cho<br>Linda</p>
+  </div>
   <div id="sketch-container"> 
     <!-- this is where the p5 sketch content goes -->
     
